--- a/videoinfo/package.json
+++ b/videoinfo/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^11.2.3"
+    "electron": "^11.2.3",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
